// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build-site-new basic: bond 1`] = `
"- [lbl](refactor.one)
"
`;

exports[`build-site-new ids are converted: converted 1`] = `
"Build site home

- [build-site.one](notes/id.build-site.one)
"
`;

exports[`build-site-new image prefix: sample.image-link.md 1`] = `
"![link-alt](fake-s3.com/link-path.jpg)
"
`;

exports[`build-site-new multiple roots: build-site.md 1`] = `
"Build site home

- [build-site.one](id.build-site.one)
"
`;

exports[`build-site-new multiple roots: foo.md 1`] = `
"- [lbl](notes/refactor.one)
"
`;

exports[`note refs note refs 1`] = `
"# Foo Content

# Bar Content 

<div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\" >
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">bar</span></div>
<a href=\\"/notes/id.bar.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div>        
  
# I am bar

 [foo](notes/id.foo)


</div>    
</div>
"
`;
